--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://m1rels.github.io",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b master -d out",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -19,5 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
